# tls-12

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: bytes.rs  http-server.rs  ring.rs  tls-server.rs  tlsclient-hyper.rs  tlsclient.rs
src/: certificate.rs  client_hello.rs  client_key_exchange.rs  enums.rs  handshake.rs  lib.rs  prf.rs  protocol_version.rs  server_hello.rs  server_hello_done.rs  server_key_exchange.rs  tls_plaintext.rs  tls_type.rs
