[package]
name = "tls-12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.25", features = ["full"] }
tokio = { version = "1.13.0", features = ["full"] }
rustls = "0.21.0"
rustls-pemfile = "1.0.2"
futures-util = "0.3.17"
tokio-rustls = "0.24.0"
pretty_env_logger = "0.4"
hyper-rustls = "0.24.0"
ring = "0.16.20"
bytes = "1.4.0"
byteorder = "1.4.3"
chrono = "0.4.24"
rustls-native-certs = "0.6.2"
x509-parser = "0.15.0"
x25519-dalek = { version = "2.0.0-rc.2", features = ["getrandom"] }
rand = { version = "0.8.5", features = ["getrandom"] }
